--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "@mui/material": "^6.1.3",
     "formidable": "^3.5.1",
     "next": "14.2.15",
+    "p-limit": "^6.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
