adding further readme, fixing concurrency issue

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 ASTRA_DB_API_ENDPOINT=https://...
 ASTRA_DB_APPLICATION_TOKEN=AstraCS:...
 
+# LANGFLOW_WORKERS controls how many concurrent requests can be made to Langflow
+# Langflow is generally waiting for API requests, so can be set to your CPU count or even higher!
+LANGFLOW_WORKERS=8
 #LANGFLOW_LOG_LEVEL=info
 #LANGFLOW_LOAD_FLOWS_PATH=
 
